<resources>
    <string name="app_name">SODV3203_FinalProject</string>
    <string name="big">BIG</string>
    <string name="bigtitle">BIG</string>
    <string name="step">STEP</string>
    <string name="bigstep_icon">BIGSTEP ICON</string>
    <string name="workout_logs">Workouts</string>
    <string name="chest">Chest</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="frisay">F</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="legs">Legs</string>
    <string name="arms">Arms</string>
    <string name="back">Back</string>
    <string name="workout_label">Workout_Label</string>
    <string name="add_a_new_workout">Add a New Workout</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_paragraph">Your journey to a stronger, healthier you starts now. Let’s take that big step together!</string>
    <string name="login">Login</string>
    <string name="username_or_email">Username or Email</string>
    <string name="hint_message">example@example.com</string>
    <string name="example_example_com">hint</string>
    <string name="hint">"  example@example.com"</string>
    <string name="password_label">Password</string>
    <string name="hint_password">" **********"</string>
    <string name="hint_password_">"   *********"</string>
    <string name="forgot_password_onClick">Forgot Password?</string>
    <string name="login_btn">Login</string>
    <string name="username_or_email_label">Username or Email</string>
    <string name="or_sign_up_with_label">or sign up with</string>
    <string name="don_t_have_an_account_label">Don\'t have an account?</string>
    <string name="sign_up_onClickListener">Sign Up</string>
    <string name="contentDesc_btnGmail">Sign in with Gmail or Google</string>
    <string name="contentDesc_btnFacebook">Sign in with Facebook</string>
    <string name="create_an_account">Create an Account</string>
    <string name="let_s_start">Let\'s Start!</string>
    <string name="full_name">Full name</string>
    <string name="createAccount_emailOrPhoneNumber_text">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="createAccount_PasswordCritera">Min of 8 characters</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_for_confirm_password">********</string>
    <string name="confirm_password_placeholder">********</string>
    <string name="password_placeholder_hint">Min_of_8_characters</string>
    <string name="forgotten_password">Forgotten Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_label">Enter your Email address or Phone Number</string>
    <string name="contiue_btn">Contiue</string>
    <string name="continue_btn">Continue</string>
    <string name="set_password">Set Password</string>
    <string name="set_password_title">Password</string>
    <string name="hint_for_set_password">********</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="hint_confirm_set_password">********</string>
    <string name="reset_btn">Reset</string>
    <string name="search">Search</string>
    <string name="search_placeholder">Search</string>
    <string name="all_txt">All</string>
    <string name="search_txt">Search</string>
    <string name="settings_txt">Settings</string>
    <string name="password_setting">Password Setting</string>
    <string name="delete_account">Delete Account</string>
    <string name="dropdown_arrow">dropdown_arrow</string>
    <string name="search_SearchResults">Results</string>
    <string name="textview">TextView</string>
    <string name="createAccount_SignUp_btn_text">Sign Up</string>
    <string name="passReset_ExplanationText">Please enter your email so that we can recover your password</string>
    <string name="delete">Delete Account</string>
    <string name="delete_question">Are you sure you want delete this account?</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="workout_ScrollView_SpeakText">Workout List</string>
    <string name="settings_ForgotPwd_SpeakText">Forgot Password</string>
    <string name="settings_apply">Apply Changes</string>
    <string name="delete_confirmBtn_SpeakText">Delete Account Button</string>
    <string name="createWorkout_TitleText">Create Workout</string>
    <string name="CWR_NameTag">Routine Name:</string>
    <string name="CWR_workoutDays_text">Routine Days:</string>
    <string name="CWR_Sunday">Sunday</string>
    <string name="CWR_Monday">Monday</string>
    <string name="CWR_Tuesday">Tuesday</string>
    <string name="CWR_Wednesday">Wednesday</string>
    <string name="CWR_Thursday">Thursday</string>
    <string name="CWR_Friday">Friday</string>
    <string name="CWR_Saturday">Saturday</string>
    <string name="CWR_btn_SubmitText">Submit</string>
    <string name="RLRD_TV_name_default">default_name</string>
    <string name="RLRD_dropdownbtn_speaktext">Drop down button to view, edit, or delete\nthis workout routine.</string>
    <string name="RLRD_PopUpMenu_WorkoutItem">Workout</string>
    <string name="RLRD_PopUpMenu_Edit">Edit</string>
    <string name="RLRD_PopUpMenu_Delete">Delete</string>
    <string name="EWR_titleText">Edit Workout</string>
    <string name="EWR_ET_hintTxt">New Routine Name</string>
    <string name="RLWD_workoutTitle_default">default_text</string>
    <string name="RLWD_targetMuscle_defaultText">default_tgt</string>
    <string name="RLWD_setsTitle">Sets:</string>
    <string name="RLWD_repsTitle">Reps:</string>
    <string name="RLWED_ET_setHint">Set Count</string>
    <string name="RLWED_ET_repHint">Rep Count</string>
    <string name="RLWED_ibtn_delete_speakText">Delete this workout</string>
    <string name="WM_routineSpeakText">Your workout list for this routine</string>
    <string name="WM_exitBtn_text">Exit Workout Mode</string>
    <string name="RLWMD_doneText_default">def_done</string>
    <string name="RLWMD_incSetBtn_speakText">Increment Set</string>
    <string name="RLWMD_decSetBtn_speakText">Decrement Set</string>
    <string name="RLWMD_setsTitle_defaultText">Set: X</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="big_text">BIG</string>
    <string name="step_text">STEP</string>
    <string name="Subttitle">Ready to crush today\'s workout?</string>
    <string name="create_workout">Create Workout</string>
    <string name="workout_routine">Workout routine</string>
    <string name="search_homepage">Search</string>
    <string name="home_TV_settingsTitle">Settings</string>
    <string name="home_ibtn_settings_desc">Settings Button</string>
    <string name="home_ibtn_workout_desc">View Workouts</string>
    <string name="home_ibtn_createWorkout_desc">Create A Workout</string>
    <string name="home_ibtn_search_desc">Search for a Workout</string>
    <string name="search_cont_SearchResults_desc">Search Results</string>
    <string name="RLW_ibtn_AddToRoutine_desc">Add to specific routine</string>
    <string name="AWFS_btn_cancelText">Cancel</string>
    <string name="AWFS_TV_titleText">Add to?</string>
    <string name="AWFS_sets_hint">#</string>
</resources>