<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:enabled="true"
        android:visible="true">
        <item
            android:enabled="true"
            android:title="@string/RLRD_PopUpMenu_WorkoutItem"
            android:visible="true"
            app:showAsAction="ifRoom" />
        <item
            android:enabled="true"
            android:title="@string/RLRD_PopUpMenu_Edit"
            android:visible="true"
            app:showAsAction="ifRoom" />
        <item
            android:enabled="true"
            android:title="@string/RLRD_PopUpMenu_Delete"
            android:visible="true"
            app:showAsAction="ifRoom" />
    </group>
</menu>