<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/RLRD_container"
        style="@style/BigStepTheme.WorkoutDisplay.Container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:orientation="vertical">

            <TextView
                android:id="@+id/RLRD_TV_name"
                style="@style/Widget.BigStepTheme.WorkoutDisplay.Container.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RLRD_TV_name_default" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/RLRD_TV_Sun"
                    style="@style/Widget.BigStepTheme.WorkoutDisplay.Container.Day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sunday" />

                <TextView
                    android:id="@+id/RLRD_TV_Mon"
                    style="@style/Widget.BigStepTheme.WorkoutDisplay.Container.Day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/monday" />

                <TextView
                    android:id="@+id/RLRD_TV_Tue"
                    style="@style/Widget.BigStepTheme.WorkoutDisplay.Container.Day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tuesday" />

                <TextView
                    android:id="@+id/RLRD_TV_Wed"
                    style="@style/Widget.BigStepTheme.WorkoutDisplay.Container.Day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wednesday" />

                <TextView
                    android:id="@+id/RLRD_TV_Thu"
                    style="@style/Widget.BigStepTheme.WorkoutDisplay.Container.Day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/thursday" />

                <TextView
                    android:id="@+id/RLRD_TV_Fri"
                    style="@style/Widget.BigStepTheme.WorkoutDisplay.Container.Day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/friday" />

                <TextView
                    android:id="@+id/RLRD_TV_Sat"
                    style="@style/Widget.BigStepTheme.WorkoutDisplay.Container.Day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/saturday" />
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/RLRD_ibtn_dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/workoutResultBGColor"
            android:contentDescription="@string/RLRD_dropdownbtn_speaktext"
            app:srcCompat="@drawable/dropdown_arrow"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>