<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/back_container"
        android:layout_width="@dimen/backBtn_width"
        android:layout_height="@dimen/backBtn_height"
        android:backgroundTint="@color/BackgroundColor"
        android:gravity="center"
        android:onClick="btn_GoBack"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_goBack"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/generic_minHeight"
            android:layout_weight="1"
            android:backgroundTint="@color/BackgroundColor"
            android:contentDescription="@string/backBtn_contentDesc"
            app:srcCompat="@drawable/arrow" />

        <TextView
            android:id="@+id/label_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="@color/TextColor"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="DuplicateIds" />

    </LinearLayout>

    <TextView
        android:id="@+id/CWR_Title"
        style="@style/Widget.BigStepTheme.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/createWorkout_TitleText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_container" />

    <LinearLayout
        style="@style/BigStepTheme.Routine.ECC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/CWR_btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CWR_Title">

        <EditText
            android:id="@+id/CWR_ET_routineName"
            style="@style/Widget.BigStepTheme.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:autofillHints=""
            android:hint="@string/CWR_NameTag"
            android:inputType="text"
            android:maxLength="@integer/CWR_editText_maxLen" />

        <TextView
            style="@style/Widget.BigStepTheme.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/CWR_workoutDays_text"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_bg"
            android:backgroundTint="@color/GreenSecondary"
            android:orientation="vertical"
            android:padding="10dp">

            <CheckBox
                android:id="@+id/CWR_CB_Sun"
                style="@style/Widget.BigStepTheme.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="@dimen/checkBox_minHeight"
                android:text="@string/CWR_Sunday" />

            <CheckBox
                android:id="@+id/CWR_CB_Mon"
                style="@style/Widget.BigStepTheme.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="@dimen/checkBox_minHeight"
                android:text="@string/CWR_Monday" />

            <CheckBox
                android:id="@+id/CWR_CB_Tue"
                style="@style/Widget.BigStepTheme.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="48dp"
                android:text="@string/CWR_Tuesday" />

            <CheckBox
                android:id="@+id/CWR_CB_Wed"
                style="@style/Widget.BigStepTheme.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="@dimen/checkBox_minHeight"
                android:text="@string/CWR_Wednesday" />

            <CheckBox
                android:id="@+id/CWR_CB_Thu"
                style="@style/Widget.BigStepTheme.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="@dimen/checkBox_minHeight"
                android:text="@string/CWR_Thursday" />

            <CheckBox
                android:id="@+id/CWR_CB_Fri"
                style="@style/Widget.BigStepTheme.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="@dimen/checkBox_minHeight"
                android:text="@string/CWR_Friday" />

            <CheckBox
                android:id="@+id/CWR_CB_Sat"
                style="@style/Widget.BigStepTheme.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="48dp"
                android:text="@string/CWR_Saturday" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/CWR_btn_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/CWR_btn_SubmitText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>