<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/back_container"
        android:layout_width="@dimen/backBtn_width"
        android:layout_height="@dimen/backBtn_height"
        android:backgroundTint="@color/BackgroundColor"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/BackgroundColor"
            app:srcCompat="@drawable/arrow"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="@color/TextColor"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/EWR_Title"
        style="@style/Widget.BigStepTheme.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/EWR_titleText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_container" />

    <LinearLayout
        style="@style/BigStepTheme.Routine.ECC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EWR_Title">

        <EditText
            android:id="@+id/EWR_ET_routineName"
            style="@style/Widget.BigStepTheme.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/EWR_ET_hintTxt"
            android:inputType="text" />

        <TextView
            style="@style/Widget.BigStepTheme.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/CWR_NameTag"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/_null"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/_null"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/EWR_CB_Sun"
                    style="@style/Widget.BigStepTheme.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/CWR_Sunday" />

                <CheckBox
                    android:id="@+id/EWR_CB_Mon"
                    style="@style/Widget.BigStepTheme.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/CWR_Monday" />

                <CheckBox
                    android:id="@+id/EWR_CB_Tue"
                    style="@style/Widget.BigStepTheme.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/CWR_Tuesday" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/_null"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/EWR_CB_Wed"
                    style="@style/Widget.BigStepTheme.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/CWR_Wednesday" />

                <CheckBox
                    android:id="@+id/EWR_CB_Thu"
                    style="@style/Widget.BigStepTheme.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/CWR_Thursday" />

                <CheckBox
                    android:id="@+id/EWR_CB_Fri"
                    style="@style/Widget.BigStepTheme.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/CWR_Friday" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/EWR_CB_Sat"
                style="@style/Widget.BigStepTheme.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/CWR_Saturday" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/EWR_btn_Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="submit"
        android:text="@string/CWR_btn_SubmitText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>