<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/BigStepTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/back_container"
        android:layout_width="132dp"
        android:layout_height="160dp"
        android:backgroundTint="@color/BackgroundColor"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/BackgroundColor"
            android:contentDescription="@string/backBtn_contentDesc"
            android:minHeight="@dimen/generic_minHeight"
            app:srcCompat="@drawable/arrow" />

        <TextView
            style="@style/Widget.BigStepTheme.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/homeBar"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/homeBtn_Home"
            style="@style/Widget.BigStepTheme.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:contentDescription="@string/home_ibtn_createWorkout_desc"
            app:srcCompat="@drawable/homebar_home_icon"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/homeBtn_workout"
            style="@style/Widget.BigStepTheme.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/home_ibtn_workout_desc"
            app:srcCompat="@drawable/homebar_workout_icon"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/homeBtn_search"
            style="@style/Widget.BigStepTheme.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/home_ibtn_search_desc"
            app:srcCompat="@drawable/homebar_search_icon"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/homeBtn_settings"
            style="@style/Widget.BigStepTheme.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/home_ibtn_settings_desc"
            app:srcCompat="@drawable/homebar_settings_icon"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|end"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/homeBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_container">

        <TextView
            android:id="@+id/search_txt"
            style="@style/Widget.BigStepTheme.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/search"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_SearchBar"
                style="@style/Widget.BigStepTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:background="@drawable/round_corner_bg"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/search_placeholder"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="12dp"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/settings_btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/search_txt"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/top_searches_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/round_corner_bg"
            android:backgroundTint="@color/buttonBGColor"
            android:padding="10dp"
            android:text="@string/search_SearchResults"
            android:textAlignment="center"
            android:textColor="@color/TextColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_cont_SearchResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/search_cont_SearchResults_desc" />
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>